--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -32,6 +32,11 @@ mawus__pfx_auth: /certs/auth/auth.pfx
 mawus__pfx_signing: /certs/signing/signing.pfx
 mawus__pfx_www: /certs/www/www.pfx
 
+# to be set by cert process
+mawus__pfx_pwd_api:
+mawus__pfx_pwd_auth:
+mawus__pfx_pwd_www:
+
 mawus__gdrive_creds_dir: "{{ controller_mawus_env_root }}/gdrive-creds"
 mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
 mawus__google_email_creds_file: /google-creds/www_emailer.json
