--- a/inventories/host_vars/lvmtest.yml
+++ b/inventories/host_vars/lvmtest.yml
@@ -1,11 +1,13 @@
 ---
 ansible_host: 192.168.122.138
 ansible_user: mmorano
+external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/lvmtest"
 
 # fedora base
 fed_b__hostname: lvmtest
 
 # ddclient
+dd__secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
 dd__tmp_dir: /home/svc_ddclient
 dd__systemd_dir: /home/svc_ddclient/.config/systemd/user
 dd__namecheap_password: "{{ vault_namecheap_password }}"
