--- a/inventories/host_vars/vmtest2.yml
+++ b/inventories/host_vars/vmtest2.yml
@@ -1,16 +1,13 @@
 ansible_host: 192.168.122.245
 ansible_user: mmorano
+external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/vmtest2"
 
 # fedora base
 fed_b__hostname: vmtest2
 
-external_vars_root: "{{ lookup('env', 'HOME') }}/ansible/hosts/{{ hostname }}"
-ddclient_secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
-
-# -------------------------------------
 # ddclient
-# -------------------------------------
-dd__tmp_dir: /home/svc_ddclient
+dd__secrets_file: "{{ external_vars_root }}/ddclient_secrets.yml"
+dd__tmp_dir: /home/svc_ddclient/_ansible_temp
 dd__systemd_dir: /home/svc_ddclient/.config/systemd/user
 dd__namecheap_password: "{{ vault_namecheap_password }}"
 dd__username: svc_ddclient
