--- a/roles/mikeandwan_us/tasks/maw_solr_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_solr_init.yml
@@ -10,24 +10,34 @@
     cmd: "podman exec -it {{ solr_container.container.Name }} solr config -c multimedia-categories -p 8983 -action set-user-property -property update.autoCreateFields -value false"
   changed_when: true
 
-- name: set synonym path (relative to this role - otherwise looks in podman_copy_to_volume if specified in that step)
+- name: Define tmp dir variable
   ansible.builtin.set_fact:
-    local_synonym_path: "{{ role_path }}/files/solr_synonyms.txt"
+    mawus_solr__tempdir: "{{ remote_home_dir }}/_tmp_ansible_maw_solr"
+
+- name: Ensure temp dir exists
+  ansible.builtin.file:
+    path: "{{ mawus_solr__tempdir }}"
+    state: directory
+    mode: u+rw
+
+- name: Copy synonym file
+  ansible.builtin.copy:
+    src: solr_synonyms.txt
+    dest: "{{ mawus_solr__tempdir }}"
+    mode: u+rw
 
 - name: configure synonyms
   ansible.builtin.include_role:
-    name: podman_copy_to_volume
+    name: podman_copy
   vars:
-    podman_copy_remote_temp_dir: "{{ remote_home_dir }}/_tmp_ansible"
-    podman_copy_volume_name: "{{ solr_volume.volume.Name }}"
-    podman_copy_src_path: "{{ local_synonym_path }}"
-    podman_copy_dest_relative_path: data/multimedia-categories/conf/synonyms.txt
+    pod_cp__src_dir_or_volume: "{{ mawus_solr__tempdir }}"
+    pod_cp__dest_dir_or_volume: "{{ solr_volume.volume.Name }}"
+    pod_cp__command: cp -R /src/. /dest/data/multimedia-categories/conf
 
-- name: cleanup remote temp dir
+- name: cleanup temp dir
   ansible.builtin.file:
-    path: "{{ remote_home_dir }}/tmp_solr"
+    path: "{{ mawus_solr__tempdir }}"
     state: absent
-  when: ansible_connection != 'local'
 
 - name: reload core for synonyms to take effect
   ansible.builtin.command:
