--- a/roles/mikeandwan_us/tasks/maw_volumes_populate.yml
+++ b/roles/mikeandwan_us/tasks/maw_volumes_populate.yml
@@ -1,104 +1,158 @@
 ---
 - name: migrate auth dataprotection files
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: auth_dataprotection_volume.changed
   vars:
-    migvol_orig_volume_name: maw-auth-dataprotection
-    migvol_new_volume_name: "{{ auth_dataprotection_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-auth-dataprotection
+    pod_cp__dest_dir_or_volume: "{{ auth_dataprotection_volume.volume.Name }}"
 
 - name: migrate api dataprotection files
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: api_dataprotection_volume.changed
   vars:
-    migvol_orig_volume_name: maw-api-dataprotection
-    migvol_new_volume_name: "{{ api_dataprotection_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-api-dataprotection
+    pod_cp__dest_dir_or_volume: "{{ api_dataprotection_volume.volume.Name }}"
 
 - name: migrate www dataprotection files
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: www_dataprotection_volume.changed
   vars:
-    migvol_orig_volume_name: maw-www-dataprotection
-    migvol_new_volume_name: "{{ www_dataprotection_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-www-dataprotection
+    pod_cp__dest_dir_or_volume: "{{ www_dataprotection_volume.volume.Name }}"
 
 - name: migrate certbot certs
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: certbot_certs_volume.changed
   vars:
-    migvol_command: cp -R /src/internal/. /dest
-    migvol_orig_volume_name: maw-certbot-certs
-    migvol_new_volume_name: "{{ certbot_certs_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-certbot-certs
+    pod_cp__dest_dir_or_volume: "{{ certbot_certs_volume.volume.Name }}"
+    pod_cp__command: cp -R /src/internal/. /dest
 
 - name: migrate certbot validation
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: certbot_validation_volume.changed
   vars:
-    migvol_orig_volume_name: maw-certbot-validation
-    migvol_new_volume_name: "{{ certbot_validation_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-certbot-validation
+    pod_cp__dest_dir_or_volume: "{{ certbot_validation_volume.volume.Name }}"
 
 - name: migrate maw-certs
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: maw_cert_volume.changed
   vars:
-    migvol_result_varname: maw_certs_migrated
-    migvol_orig_volume_name: maw-certs
-    migvol_new_volume_name: "{{ maw_cert_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-certs
+    pod_cp__dest_dir_or_volume: "{{ maw_cert_volume.volume.Name }}"
 
 - name: migrate maw-reverse-geocode
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: reverse_geocode_volume.changed
   vars:
-    migvol_orig_volume_name: maw-reverse-geocode
-    migvol_new_volume_name: "{{ reverse_geocode_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-reverse-geocode
+    pod_cp__dest_dir_or_volume: "{{ reverse_geocode_volume.volume.Name }}"
 
 - name: migrate maw-uploads
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: uploads_volume.changed
   vars:
-    migvol_orig_volume_name: maw-uploads
-    migvol_new_volume_name: "{{ uploads_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-uploads
+    pod_cp__dest_dir_or_volume: "{{ uploads_volume.volume.Name }}"
 
 - name: migrate maw-gdrive-creds
   ansible.builtin.include_role:
     name: podman_migrate_volume_data
   when: gdrive_creds_volume.changed
   vars:
-    migvol_result_varname: gdrive_creds_migrated
-    migvol_orig_volume_name: maw-gdrive-creds
-    migvol_new_volume_name: "{{ gdrive_creds_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-gdrive-creds
+    pod_cp__dest_dir_or_volume: "{{ gdrive_creds_volume.volume.Name }}"
 
-- name: copy google drive credentials to volume if not migrated
-  ansible.builtin.include_role:
-    name: podman_copy_to_volume
-  vars:
-    podman_copy_remote_temp_dir: "{{ remote_home_dir }}/_tmp_ansible"
-    podman_copy_src_path: "{{ item }}"
-    podman_copy_volume_name: "{{ gdrive_creds_volume.volume.Name }}"
-  with_fileglob: "{{ mawus__gdrive_creds_dir }}/*"
-  when: gdrive_creds_volume.changed and (not gdrive_creds_migrated)
+- name: copy gdrive credentials when not migrated
+  block:
+    - name: Define tmp dir variable
+      ansible.builtin.set_fact:
+        mawus_gdrive__tempdir: "{{ remote_home_dir }}/_tmp_ansible_maw_gdrive"
+
+    - name: Ensure temp dir exists
+      ansible.builtin.file:
+        path: "{{ mawus_gdrive__tempdir }}"
+        state: directory
+        mode: u+rw
+
+    - name: copy files to temp dir
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ mawus_gdrive__tempdir }}"
+        mode: u+rw
+      with_fileglob: "{{ mawus__gdrive_creds_dir }}/*"
+
+    - name: copy google drive credentials to volume
+      ansible.builtin.include_role:
+        name: podman_copy
+      vars:
+        pod_cp__src_dir_or_volume: "{{ mawus_gdrive__tempdir }}"
+        pod_cp__dest_dir_or_volume: "{{ gdrive_creds_volume.volume.Name }}"
+
+    - name: Cleanup temp dir
+      ansible.builtin.file:
+        path: "{{ mawus_gdrive__tempdir }}"
+        state: absent
+
+  when: gdrive_creds_volume.changed and (not pod_cp__result)
 
 - name: migrate maw-google-creds
   ansible.builtin.include_role:
-    name: podman_migrate_volume_data
+    name: podman_copy
   when: google_creds_volume.changed
   vars:
-    migvol_result_varname: google_creds_migrated
-    migvol_orig_volume_name: maw-google-creds
-    migvol_new_volume_name: "{{ google_creds_volume.volume.Name }}"
+    pod_cp__skip_if_src_not_exists: true
+    pod_cp__src_dir_or_volume: maw-google-creds
+    pod_cp__dest_dir_or_volume: "{{ google_creds_volume.volume.Name }}"
 
-- name: copy google email credentials to volume if not migrated
-  ansible.builtin.include_role:
-    name: podman_copy_to_volume
-  vars:
-    podman_copy_remote_temp_dir: "{{ remote_home_dir }}/_tmp_ansible"
-    podman_copy_src_path: "{{ item }}"
-    podman_copy_volume_name: "{{ google_creds_volume.volume.Name }}"
-  with_fileglob: "{{ mawus__google_email_creds_dir }}/*"
-  when: google_creds_volume.changed and (not google_creds_migrated)
+- name: copy google credentials when not migrated
+  block:
+
+    - name: Define tmp dir variable
+      ansible.builtin.set_fact:
+        mawus_google__tempdir: "{{ remote_home_dir }}/_tmp_ansible_maw_google"
+
+    - name: Ensure temp dir exists
+      ansible.builtin.file:
+        path: "{{ mawus_google__tempdir }}"
+        state: directory
+        mode: u+rw
+
+    - name: copy files to temp dir
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ mawus_google__tempdir }}"
+        mode: u+rw
+      with_fileglob: "{{ mawus__google_email_creds_dir }}/*"
+
+    - name: copy google drive credentials to volume
+      ansible.builtin.include_role:
+        name: podman_copy
+      vars:
+        pod_cp__src_dir_or_volume: "{{ mawus_google__tempdir }}"
+        pod_cp__dest_dir_or_volume: "{{ google_creds_volume.volume.Name }}"
+
+    - name: Cleanup temp dir
+      ansible.builtin.file:
+        path: "{{ mawus_google__tempdir }}"
+        state: absent
+
+  when: google_creds_volume.changed and (not pod_cp__result)
