--- a/roles/mikeandwan_us/tasks/maw_postgres_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_init.yml
@@ -64,10 +64,11 @@
       - "{{ pg_backup_dir }}:/postgres_backup:ro"
 
 - name: get create_roles result
-  ansible.builtin.include_tasks: wait_for_container_to_stop.yml
+  ansible.builtin.include_role:
+    name: podman_wait_for_stop
   vars:
-    container_name: "{{ mawus__env }}-maw-pginit-roles"
-    exit_code_varname: create_roles_result
+    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-roles"
+    pod_stop__result_varname: create_roles_result
 
 - name: fail if roles not created
   ansible.builtin.fail:
