--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -18,10 +18,11 @@
       - "ALTER ROLE {{ item.username }} WITH PASSWORD '{{ item.password }}';"
 
 - name: wait for set role container to stop
-  ansible.builtin.include_tasks: wait_for_container_to_stop.yml
+  ansible.builtin.include_role:
+    name: podman_wait_for_stop
   vars:
-    container_name: "{{ mawus__env }}-maw-pginit-role-password"
-    exit_code_varname: role_pwd_result
+    pod_stop__container_name: "{{ mawus__env }}-maw-pginit-role-password"
+    pod_stop__result_varname: role_pwd_result
 
 - name: fail if password not set
   ansible.builtin.fail:
