--- a/inventories/group_vars/mawus_test.yml
+++ b/inventories/group_vars/mawus_test.yml
@@ -9,7 +9,7 @@ remote_mawus_root: "{{ remote_home_dir }}/mawus_test"
 # asset directory root
 asset_dir_root: /srv/www/website_assets
 
-# mawus
+# shared mawus settings
 mawus__username: "{{ ansible_user_id }}"
 mawus__env: test
 mawus__aspnet_env: test
@@ -50,13 +50,11 @@ mawus__pg_backup_roles: roles.sql
 mawus__pg_backup_idsrv: idsrv.20220307.dump
 mawus__pg_backup_www: maw_website.20220307.dump
 
-mawus__version_redis: 6
 mawus__version_postgres: 14
 mawus__version_solr: 8
 
-mawus__podman_image_redis: docker.io/redis:6-alpine
-mawus__podman_image_postgres: docker.io/postgres:14-alpine
-mawus__podman_image_solr: docker.io/solr:8
+mawus__podman_image_postgres: "docker.io/postgres:{{ mawus__version_postgres }}-alpine"
+mawus__podman_image_solr: "docker.io/solr:{{ mawus__version_solr }}"
 
 mawus__podman_pod: test-maw-pod
 mawus__podman_env_dir: "{{ remote_mawus_root }}/podman-env"
@@ -68,7 +66,6 @@ mawus__podman_image_www: localhost/maw-www-test
 mawus__podman_image_gateway: localhost/maw-gateway-test
 mawus__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
 mawus__podman_image_certbot: ""
-mawus__podman_image_cache_sync: docker.io/aerisg222/maw-cache-sync:latest
 mawus__podman_image_solr_indexer: docker.io/aerisg222/maw-solr-indexer:latest
 mawus__podman_image_reverse_geocode: docker.io/aerisg222/maw-reverse-geocode:latest
 mawus__podman_image_gdrive: ""
@@ -101,3 +98,12 @@ mawus__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 
 # google api key (maps / reverse geocode)
 mawus__google_api_key: "{{ vault_google_api_key }}"
+
+# mawus redis settings
+mawus_redis__version: 6
+mawus_redis__image: "docker.io/redis:{{ mawus_redis__version }}-alpine"
+mawus_redis__name: "{{ mawus__env }}-maw-redis"
+mawus_redis__volume: "{{ mawus__env }}-maw-redis-{{ mawus_redis__version }}"
+mawus_redis__cache_sync_image: docker.io/aerisg222/maw-cache-sync:latest
+mawus_redis__cache_sync_name: "{{ mawus__env }}-maw-cache-sync"
+mawus_redis__cache_sync_envfile: "{{ mawus__podman_env_dir }}/maw-cache-sync.env"
