--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -77,27 +77,6 @@
 - name: include maw_postgres_init.yml
   ansible.builtin.include_tasks: maw_postgres_init.yml
 
-- name: maw-solr container
-  containers.podman.podman_container:
-    name: "{{ mawus__env }}-maw-solr"
-    pod: "{{ mawus__podman_pod }}"
-    image: "{{ mawus__podman_image_solr }}"
-    state: started
-    volume:
-      - "{{ solr_volume.volume.Name }}:/var/solr:rw,z"
-    label:
-      io.containers.autoupdate: image
-  register: solr_container
-
-- name: wait for solr container
-  ansible.builtin.include_role:
-    name: podman_wait_for_start
-  vars:
-    pod_start__container_name: "{{ solr_container.container.Name }}"
-
-- name: include maw_solr_init.yml
-  ansible.builtin.include_tasks: maw_solr_init.yml
-
 - name: set the dir / volume variables
   ansible.builtin.set_fact:
     cert_vol: "{{ maw_cert_volume.volume is defined | ternary(maw_cert_volume.volume.Name, mawus__certs_dir) }}"
@@ -310,7 +289,7 @@
       before: "container-{{ mawus__env }}-maw-gateway.service"
     - unitfile: "container-{{ mawus__env }}-maw-postgres.service"
       before: "container-{{ mawus__env }}-maw-api.service container-{{ mawus__env }}-maw-auth.service container-{{ mawus__env }}-maw-www.service container-{{ mawus__env }}-maw-cache-sync.service"
-    - unitfile: "container-{{ mawus_redis__name }}.service"
+    - unitfile: "container-{{ mawus_redis__container }}.service"
       before: "container-{{ mawus__env }}-maw-api.service container-{{ mawus__env }}-maw-www.service container-{{ mawus__env }}-maw-cache-sync.service"
     - unitfile: "container-{{ mawus__env }}-maw-solr.service"
       before: "container-{{ mawus__env }}-maw-api.service container-{{ mawus__env }}-maw-www.service"
